--- a/views/form.ejs
+++ b/views/form.ejs
@@ -31,7 +31,7 @@
                 </h1>
             </div>
             <div class="card-body">
-                <form id="myForm">
+                <form action="/add" method="post" id="myForm"></form>
                     <div class="mb-3">
                         <label for="id" class="form-label">ID</label>
                         <input type="text" class="form-control" id="id" aria-describedby="emailHelp">
