--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet " 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/public/css/styles.css"> 
     <title><%=title%></title>
@@ -12,41 +12,40 @@
 <body>
     <%-include('partials/header.ejs')%>
 
-    <div class="container">
+    <div class="container mt-4">
         <div class="card">
             <div class="card-header">
                 <h1 class="text-center">Ingrese una nueva tarea</h1>
             </div>
             <div class="card-body">
                 <% if(entries.length) { %>
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th scope="col">Título</th>
-                                <th scope="col">Contenido</th>
-                                <th scope="col">Fecha de Publicación</th>
-                                <th scope="col">Acciones</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <% entries.forEach(function(entry) { %>
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <thead>
                                 <tr>
-                                    <td><%= entry.title %></td>
-                                    <td><%= entry.content %></td>
-                                    <td><%= entry.published %></td>
-                                    <td>
-                                        <!-- Botón para Editar (Color Amarillo) -->
-                                        <button class="btn btn-warning">Editar</button>
-                                        
-                                        <!-- Botón para Eliminar (Color Rojo) -->
-                                        <button class="btn btn-danger">Eliminar</button>
-                                    </td>
+                                    <th scope="col">Título</th>
+                                    <th scope="col">Contenido</th>
+                                    <th scope="col">Fecha de Publicación</th>
+                                    <th scope="col">Acciones</th>
                                 </tr>
-                            <% }) %>
-                        </tbody>
-                    </table>
+                            </thead>
+                            <tbody>
+                                <% entries.forEach(function(entry) { %>
+                                    <tr>
+                                        <td><%= entry.title %></td>
+                                        <td><%= entry.content %></td>
+                                        <td><%= entry.published %></td>
+                                        <td>
+                                            <!-- Botón para Eliminar (Color Rojo) -->
+                                            <button class="btn btn-danger">Eliminar</button>
+                                        </td>
+                                    </tr>
+                                <% }) %>
+                            </tbody>
+                        </table>
+                    </div>
                 <% } else { %>
-                    <p>No existen entradas</p>
+                    <p class="text-center">No existen entradas</p>
                 <% } %>
             </div>
         </div>
